force-app/main/default/objects/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Wealth Engine CSV Fields</label>
</CustomObject>