force-app/main/default/objects/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c/fields/ucinn_ascendv2__Header_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Header_Name__c</fullName>
    <label>Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>