force-app/main/default/objects/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c/fields/ucinn_ascendv2__Is_on_Lookup_Field__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_on_Lookup_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes whether the field is actually a field on a look up field.

For example, Owner&apos;s City.</description>
    <inlineHelpText>Denotes whether the field is actually a field on a look up field. 

For example, Owner&apos;s City.</inlineHelpText>
    <label>Is on Lookup Field</label>
    <type>Checkbox</type>
</CustomField>