force-app/main/default/objects/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c/fields/ucinn_ascendv2__Order__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Order__c</fullName>
    <description>The order in which the fields will be populated</description>
    <inlineHelpText>The order in which the fields will be populated</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>