force-app/main/default/objects/ucinn_ascendv2__Wealth_Engine_CSV_Fields__c/listViews/ucinn_ascendv2__All.listView-meta.xml
<ListView>
    <fullName>ucinn_ascendv2__All</fullName>
    <columns>NAME</columns>
    <columns>ucinn_ascendv2__API_Field_Name__c</columns>
    <columns>ucinn_ascendv2__Header_Name__c</columns>
    <columns>ucinn_ascendv2__Is_on_Lookup_Field__c</columns>
    <columns>ucinn_ascendv2__Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>